# reaper-mcp

./: .gitignore  .mcp.json  CLAUDE.md  PLAN.md  pyproject.toml
composers_assistant/scripts/: REAPER_replace_selected_midi_items_in_time_selection.py  REAPER_replace_selected_midi_items_in_time_selection_no_rep.py  REAPER_replace_selected_midi_items_in_time_selection_with_variation.py  acknowledgments.html  build_finetune_train_data.py  build_pretrain_data.py  build_val_and_test_finetune_data_infill.py  composers_assistant_nn_server.py  constants.py  containers.py  dedupe_and_filter_midi_files.py  dedupe_and_filter_midi_files_functions.py  delete_filtered_midis.py  disclaimer.txt  encoding_functions.py  finetune_model.py  instructions for finetuning.txt  instructions for pretraining.txt  license.txt  midi_inst_to_name.py  midisong.py  myfunctions.py  mymidistuff.py  mytrackviewstuff.py  nn_str_functions.py  nn_training_functions.py  preprocess_midi.py  preprocessing_functions.py  pretrain_model.py  rpr_ca_functions.py  spm_create_train_data.py  spm_train_functions.py  spm_train_models.py  tokenizer_functions.py  unjoined_vocab_tokenizer.py
data/: reascripthelp.html
lua/: bridge.lua  install.lua
server/: __main__.py  api_index.py  app.py  connection.py  helpers.py  script_tracker.py
server/tools/: analytics.py  api_search.py  composers_assistant.py  midi.py  scripting.py  setup.py  tracks.py  transport.py
tests/: test_api_index.py  test_connection.py  test_helpers.py  test_script_tracker.py
